--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,5 +57,8 @@
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
