--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "intro.js": "^8.3.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.525.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-chart": "^0.0.1",
